--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smokey-fluid-cursor",
   "version": "1.0.1",
-  "description": "A customizable fluid cursor effect for React applications. Enhance user experience with smooth, interactive cursor animations. Perfect for modern web designs.",
+  "description": "A customizable fluid cursor effect for Vanilla JavaScript/TypeScript applications running on the web. Enhance user experience with smooth, interactive cursor animations. Perfect for modern web designs.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/faraasat/smokey-fluid-cursor.git"
