chore: updated package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "animated cursor",
     "smokey fluid",
     "javascript",
-    "typescript"
+    "typescript",
+    "animated smoke cursor"
   ],
   "author": "Farasat Ali <63093876+faraasat@users.noreply.github.com>",
   "license": "MIT",
